# RRRalgorithms

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_PSYCHOLOGY_STATUS_REPORT.md  ASYNC_IMPLEMENTATION_COMPLETE.md  AUDIT_REPORT.md  CHAINLINK_DOWNLOAD_REPORT.md  CODEBASE_ANALYSIS_COMPREHENSIVE.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_DATA_QUALITY_REPORT.md  CRITICAL_21_FAILURES_ANALYSIS.md  DATA_AUDIT_SUMMARY.md  DATA_MODEL_ANALYSIS.md  DEEP_ANALYSIS_REPORT.json  DEPLOYMENT_COMPLETE_SUMMARY.md  DOWNLOAD_SUMMARY.txt  Dockerfile  FINAL_SUMMARY.md  H013_MULTI_SIGNAL_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  MASTER_COMPLETION_REPORT.md  MATIC_DOWNLOAD_REPORT.md  MULTI_EXCHANGE_UPDATE.md  NEXT_PHASE_ARCHITECTURE_IMPROVEMENTS.md  NEXT_STEPS_ACTION_PLAN.md  NOF1_VS_RRRALGORITHMS_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PHASE_10_COMPLETE.md  PHASE_2A_COMPLETE_FINAL_REPORT.md  PHASE_2A_EXECUTION_COMPLETE.md  PHASE_2B_IMPLEMENTATION_PLAN.md  PHASE_2C_IMPLEMENTATION_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_7_SUMMARY.md  PHASE_8_SUMMARY.md  PHASE_9_COMPLETION_REPORT.md  PHASE_9_SUMMARY.txt  PROFESSIONAL_INTEGRATION_COMPLETE.md  PROGRESS_UPDATE_2025_10_12_EVENING.md  README.md  (+61 more)
.claude/agents/: data-validation-optimizer.md  superthink-code-auditor.md  superthink-project-organizer.md
.github/workflows/: build-docker.yml  deploy-staging.yml  docker.yml  lint.yml  security-scan.yml  test.yml  worktree-tests.yml
benchmarks/: benchmark_async_trading_loop.py  benchmark_database.py  benchmark_deque_vs_list.py  verify_sql_injection_fix.py
config/: .env.lexar  env.lexar.template  env.local.template  lexar.yml  local.yml  neural_network.yaml  production.yml
config/api-keys/: .env.example  .env.template  .gitignore
config/database/: schema.sql  timescaledb_schema.sql
config/mcp-servers/: mcp-config.json
config/prometheus/: prometheus.yml
config/supabase/: schema.sql
deployment/: README.md  docker-compose.paper-trading.yml  docker-compose.yml
deployment/kubernetes/: deployment.yaml
docs/: AI_PSYCHOLOGY_TEAM_IMPLEMENTATION_SUMMARY.md  AI_PSYCHOLOGY_TEAM_QUICKSTART.md  API_SETUP_GUIDE.md  ARCHITECTURE_DIAGRAMS.md  COMMAND_CENTER_REQUIREMENTS.md  DASHBOARD_QUICKSTART.md  DASHBOARD_SUMMARY.md  DATABASE_INTEGRATION_PHASE1.md  DEPENDENCY_AUDIT.md  FIGMA_MCP_SETUP.md  INEFFICIENCY_DISCOVERY_COMPLETE.md  INTEGRATION_BENCHMARK_REPORT.md  LIVE_DATA_INTEGRATION.md  MULTI_EXCHANGE_INTEGRATION.md  OPTIMIZATION_SUMMARY.md  PHASE_10_SECURITY_AUDIT_REPORT.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  TRANSPARENCY_DASHBOARD_DESIGN.md  TRANSPARENCY_DASHBOARD_IMPLEMENTATION.md  TRANSPARENCY_DASHBOARD_PHASE2_COMPLETE.md  TRANSPARENCY_DASHBOARD_PHASE3_COMPLETE.md
docs/api/: fastapi_structure.py
docs/api-specs/: API_MCP_INTEGRATION.md
docs/architecture/: API_INTEGRATION_PLAN.md  ARCHITECTURE_BRAINSTORM_SUMMARY.md  ARCHITECTURE_LOCAL.md  CLASSICAL_OPTIMIZATION_MIGRATION_GUIDE.md  DATA_ARCHITECTURE_ANALYSIS.md  DEFI_INTEGRATION_EXECUTIVE_SUMMARY.md  DEFI_INTEGRATION_INDEX.md  DEFI_INTEGRATION_STRATEGY.md  DEFI_TECHNICAL_IMPLEMENTATION_GUIDE.md  NEURAL_NETWORK_ARCHITECTURE.md  PARALLEL_SUBAGENT_FRAMEWORK.md  QUANTUM_COMPUTING_REALITY_CHECK.md  QUANTUM_EXECUTIVE_SUMMARY.md  SUPERTHINK_SUBAGENTS.md  TECHNOLOGY_FUTURIST_ANALYSIS_2025-2030.md
docs/archive/: API_INTEGRATION_STATUS.md  BREAKTHROUGH_ALPHA_IMPLEMENTATION_PROGRESS.md  CLOUD_NATIVE_ARCHITECTURE_ANALYSIS.md  DATA_ARCHITECTURE_EXECUTIVE_SUMMARY.md  DEPLOYMENT_STATUS_REPORT.md  EXECUTE_PHASE_1_AND_2A.md  FINAL_SESSION_REPORT.md  IMPLEMENTATION_SESSION_2_SUMMARY.md  INFRASTRUCTURE_STATUS_REPORT.md  MIGRATION_SUMMARY.md  OPTIMIZATION_EXECUTION_COMPLETE.md  SECURITY_ASSESSMENT_REPORT.md  SESSION_SUMMARY.md  SUPERTHINK_EXECUTION_GUIDE.md  TECHNOLOGY_FUTURIST_EXECUTIVE_SUMMARY.md  TEST_RESULTS_SUMMARY.md
docs/audit/: ACTUAL_BENCHMARKS.md  CRITICAL_ISSUES.md  FINAL_AUDIT_REPORT.md  ISSUES_TRACKER.md  MASTER_AUDIT_REPORT.md
docs/database/: transparency_schema.sql
docs/deployment/: MAC_MINI_DEPLOYMENT.md  MOBILE_ACCESS_GUIDE.md  TROUBLESHOOTING.md
docs/frontend/: nextjs_structure.md
docs/guides/: PAPER_TRADING_GUIDE.md  QUICK_START.md  QUICK_START_LOCAL.md  QUICK_START_MAC_MINI.md  README_DEPLOYMENT.md  SETUP_COMMAND_CENTER.md  claude.md
docs/integration/: COINBASE_INTEGRATION.md  SYSTEM_INTEGRATION_SUMMARY.md
docs/phases/: PHASE_7_LIVE_TRADING_SYSTEM.md
docs/protocols/: AI_VALIDATION_PROTOCOL.md
docs/reports/: COMPLETE_SUPERTHINK_PLAN.md  CURRENT_STATUS_REPORT.md  DEPLOYMENT_STATUS_REPORT.md  DIVISION_1_DELIVERABLES.md  H014_H018_CLASSICAL_STRATEGIES_ANALYSIS.md  HONEST_SUMMARY.md  MIGRATION_PLAN.md  MIGRATION_REPORT.md  (+11 more)
examples/: polygon_demo.py
ingestion/: __init__.py  market_data_ingestor.py
ios/: README.md
monitoring/: docker-compose.monitoring.yml  setup_mac_monitoring.sh
scripts/: backfill_btc_all_timeframes.py  backfill_dotusd_all_timeframes.py  backfill_dotusd_to_json.py  benchmark_async_improvements.py  benchmark_optimizations.py  com.rrrventures.trading.plist  com.rrrventures.trading.unified.plist  consolidate_worktrees.py  demo_async_improvements.py  fix_imports.py  launch.sh  mac_mini_first_boot.sh  mac_mini_startup.sh  migrate_supabase_to_sqlite.py  migrate_transparency_schema.py  monitor_connection_health.py  prepare_for_mac_mini.sh  restructure_directories.sh  seed_database.py  seed_transparency_data.py  simple_async_benchmark.py  simple_benchmark.py  start_dashboard_api.sh  start_live_feed.py  test_figma_mcp.py  test_figma_mcp_session.py  test_figma_mcp_sse.py  test_phase_2b_integration.py  test_phase_2b_simple.py  test_phase_2c_integration.py  test_phase_2c_simple.py
src/: __init__.py  main.py  main_async.py  main_unified.py  trading_engine
tests/: __init__.py  conftest.py  test_backtest_pipeline.py
(+504 files in other folders)
